--- a/assets/style.css
+++ b/assets/style.css
@@ -3,3 +3,132 @@
     padding: 0;
     margin: 0;
 }
+
+:root {
+    --dark: #242333;
+    --light: #ffffff;
+    --splash: #01B0D3;
+}
+
+body {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: var(--light);
+}
+
+/* header styles */
+header {
+    background-color: var(--dark);
+    padding: 30px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+header h1{
+    font-weight: bold;
+    font-size: 36px;
+    color: var(--splash);
+    margin: 0;
+}
+
+
+header nav {
+    padding: 5px;
+    margin: 5px;
+}
+
+header nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+}
+
+header nav ul li {
+    margin-left: 25px;
+}
+
+header nav ul li a {
+    padding: 10px;
+    text-decoration: none;
+    color: var(--light);
+}
+
+/* biography styles */
+.bio {
+    background-color: var(--light);
+    color: var(--splash);
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+}
+
+.section-border {
+    width: 20%;
+    border-right: 2px black;
+    height: fit-content;
+}
+
+.bio img {
+    width:20%;
+}
+
+.bio p{
+    display: flex;
+    align-items: center;
+    padding: 10px;
+}
+
+/* Applications styling */
+.applications{
+    background-color:var(--light);
+    width: 100%;
+}
+
+.app-one {
+    display: flex;
+    padding: 10px;
+    border: 3px yellow;
+    position: relative;
+}
+
+.app-one img {
+    width: 100%;
+    height: 500px;
+}
+
+.app-one .app-text {
+    background-color: var(--dark);
+    z-index: 2;
+    width:10%;
+    position: absolute;
+    top: 400px;
+    padding: 5px 5px 5px 10px;
+    font-size: 12px;
+}
+
+.apps-box {
+    display: flex;
+}
+
+.apps {
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+}
+
+.apps img {
+    height: 250px;
+}
+
+.app-text {
+    background-color: var(--dark);
+    z-index:2;
+    width: 10%;
+    font-size: 12px;
+}
+
+.contact {
+    color: var(--splash)
+}
