--- a/assets/style.css
+++ b/assets/style.css
@@ -29,7 +29,7 @@ header h1{
     font-size: 36px;
     color: var(--splash);
     margin: 0;
-}
+    text-shadow: 0 0 5px;}
 
 
 header nav {
@@ -53,6 +53,7 @@ header nav ul li a {
     padding: 10px;
     text-decoration: none;
     color: var(--light);
+    text-shadow: 0 0 2px;
 }
 
 /* biography styles */
@@ -68,67 +69,100 @@ header nav ul li a {
     width: 20%;
     border-right: 2px black;
     height: fit-content;
+    align-self: center;
+
 }
 
 .bio img {
     width:20%;
+    height: 300px;
+    padding-left: 15px;
 }
 
 .bio p{
-    display: flex;
-    align-items: center;
-    padding: 10px;
+    width: 70%;
+    letter-spacing: 2px;
+    text-align: justify;
+    align-self: center;
+    padding-left: 50px;
 }
 
 /* Applications styling */
 .applications{
     background-color:var(--light);
     width: 100%;
+    display: flex;
+}
+
+.applications h2 {
+    color: var(--splash);
 }
 
 .app-one {
-    display: flex;
-    padding: 10px;
-    border: 3px yellow;
+    /* display: flex; */
+    padding: 2%;
+    border: 3px black;
     position: relative;
+    min-width: 90%;
 }
 
 .app-one img {
     width: 100%;
     height: 500px;
+    opacity: 0.8;
 }
 
-.app-one .app-text {
-    background-color: var(--dark);
-    z-index: 2;
-    width:10%;
-    position: absolute;
-    top: 400px;
-    padding: 5px 5px 5px 10px;
-    font-size: 12px;
-}
-
-.apps-box {
-    display: flex;
-}
-
-.apps {
-    position: relative;
-    display: flex;
-    justify-content: space-around;
-}
-
-.apps img {
-    height: 250px;
+.app-one img:hover {
+    opacity: 1.0;
 }
 
 .app-text {
     background-color: var(--dark);
-    z-index:2;
-    width: 10%;
+    z-index: 2;
+    position: absolute;
+    bottom: 50px;
     font-size: 12px;
+    letter-spacing: 2px;
+    padding: 1%;
+}
+
+.apps-box {
+    display: flex;
+    width: 80%;
+    flex-wrap: wrap;
+}
+
+.apps {
+    position: relative;
+    min-width: 50%;
+    width: 50%;
+    max-width: 50%;
+    padding: 2%;
+    border: 3px black;
+}
+
+.apps img {
+    height: 250px;
+    max-width: 100%;
+    width: 98%;
+    opacity: 0.8;
+}
+
+.apps img:hover {
+    opacity: 1.0;
 }
 
 .contact {
-    color: var(--splash)
+    color: var(--splash);
+    display: flex;
+    justify-content: space-between;
+    padding: 2%;
+}
+
+.contact a {
+    padding-right: 7px;
+}
+
+.contact p {
+    padding-right: 350px;
 }
